--- a/debian_files/changelog
+++ b/debian_files/changelog
@@ -1,3 +1,15 @@
+tseriesconfig (6.3.0-1) unstable; urgency=low
+
+  * new upstream version to support tseries-6.3
+
+ -- Juergen Schulze <juergen.schulze@met.no>  Thu, 05 Dec 2013 12:44:39 +0100
+
+tseriesconfig (6.2.2-1) unstable; urgency=low
+
+  * made tseries.ctl vnn and vv compatible
+
+ -- Juergen Schulze <juergen.schulze@met.no>  Tue, 19 Nov 2013 08:37:59 +0100
+
 tseriesconfig (6.2.1-2) unstable; urgency=low
 
   * fixed eps_plum_rr style
