--- a/debian_files/changelog
+++ b/debian_files/changelog
@@ -1,3 +1,9 @@
+tseriesconfig (6.3.1-1) unstable; urgency=low
+
+  * reimplemented havdiagram that was somehow lost in the process
+
+ -- Juergen Schulze <juergen.schulze@met.no>  Mon, 13 Jan 2014 10:39:35 +0100
+
 tseriesconfig (6.3.0-1) unstable; urgency=low
 
   * new upstream version to support tseries-6.3
