--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tseriesconfig (7.0.0-1ubuntu1) xenial; urgency=low
+
+  * version 7.0 / xenial
+
+ -- Heiko Klein <heiko.klein@met.no>  Wed, 12 Apr 2017 10:00:09 +0100
+
 tseriesconfig (6.9.0-1ubuntu1) precise; urgency=low
 
   * version 6.9
